fix : same fix in DogRepository